<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:title="Search"
        app:showAsAction="always" />
    <item
        android:id="@+id/filter"
        android:icon="@drawable/filter"
        android:title="Filter"
        app:showAsAction="always" />
    <item
        android:id="@+id/profile_item"
        android:title="Profile" />
    <item
        android:id="@+id/matches_item"
        android:title="Matches"/>
    <item
        android:id="@+id/settings_item"
        android:title="Settings"/>
</menu>
