<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/thirtysp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="Welcome " >
    </TextView>

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/profile_pic"/>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_marginTop="70dp"
        android:layout_marginStart="@dimen/twenty"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/twentyfivesp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="Name: ">
    </TextView>

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/twenty"
        android:textStyle="bold"
        android:textSize="@dimen/twentyfivesp"
        android:text="Age: ">
    </TextView>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="@dimen/twentyfivesp"
        android:text="Description: ">
    </TextView>

    <TextView
        android:id="@+id/occupation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="@dimen/twentyfivesp"
        android:text="Occupation: ">
    </TextView>
</RelativeLayout>
