...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsFragment">

    <TextView
        android:id="@+id/matches_reminder_time_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="How often would you like to be reminded?" />

    <Button
        android:id="@+id/select_matches_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select timee"
...
